# Python_advanced_microservice

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: constants.py
helpers/: my_app_helper.py
src/: main.py
src/data/: constants.py
src/helpers/: my_app_helper.py
src/models/: Pagination.py  User.py
tests/: conftest.py  test_my_service.py  test_smoke.py
