[project]
name = "microservice"
version = "0.1.0"
description = "Тестовый проект микросервиса"
authors = [
    {name = "Konstantin Poludnitsyn"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pytest (==8.4.1)",
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "uvicorn (==0.35.0)",
    "requests (==2.32.4)",
    "python-dotenv (==1.1.1)",
    "fastapi-pagination (>=0.13.3,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
